RESOLVED FIXED144149
[Mac] Hit testing on <embed> PDFs not working properly
https://bugs.webkit.org/show_bug.cgi?id=144149
Summary [Mac] Hit testing on <embed> PDFs not working properly
Brent Fulgham
Reported 2015-04-24 08:41:14 PDT
Testing has shown that there is a hit testing bug for embedded (<embed>) PDF's. Full page PDFs (at any scale) do work properly. This can be seen in the TestWebKitAPI 'ActionMenuTest' suite.
Attachments
Patch (9.60 KB, patch)
2015-04-24 13:57 PDT, Brent Fulgham
thorton: review+
Brent Fulgham
Comment 1 2015-04-24 11:06:36 PDT
Brent Fulgham
Comment 2 2015-04-24 11:08:09 PDT
There was an error in the recent PDF positioning calculations I made. I have a local fix, but it is based on the code in Bug 143952.
Brent Fulgham
Comment 3 2015-04-24 13:57:21 PDT
WebKit Commit Bot
Comment 4 2015-04-24 13:59:19 PDT
Attachment 251570 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2ObjC/ActionMenus.mm:738: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 5 2015-04-24 14:54:54 PDT
Note You need to log in before you can comment on or make changes to this bug.